# coffee-recipe

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW.md  DEPLOYMENT.md  MEMORY_ARCHITECTURE.md  PRESENTER_GUIDE.md  README.md  cba_background.md  deploy_agent.py  invoke_agent.py  lambda_function.py  lambda_requirements.txt  prompt.txt  pyproject.toml  repomix-output.xml  requirements.txt  streamlit_chat_app.py  test.py
.kiro/specs/workflow-refactor/: design.md  requirements.md  tasks.md
.kiro/steering/: deployment.md  product.md  structure.md  tech.md
agentcore-cba/cbaindicatoragent/: .bedrock_agentcore.yaml  README.md  pyproject.toml
agentcore-cba/cbaindicatoragent/cdk/: package-lock.json
agentcore-cba/cbaindicatoragent/src/: kb_tool.py  main.py
cba-frontend/: QUICKSTART.md  README.md  package-lock.json  package.json  tailwind.config.ts
cba-frontend/app/: globals.css  layout.tsx  page.tsx
cba-frontend/app/chat/: page.tsx
cba-frontend/app/compare/: page.tsx
cba-frontend/app/results/: page.tsx
cba-frontend/app/upload/: page.tsx
cba-frontend/lib/: api.ts
scripts/: build_lambda_layer.ps1  build_lambda_layer.sh  memory_policy.json  setup_memory.py
src/: agent.py  app.py  bedrock_agent.py  config.py  workflow.py
src/prompts/: __init__.py  system.txt
tests/: test_cba_ui.py  test_chat_app.py  test_error_handling.py  test_functions.py  test_workflow_e2e.py
